--- a/MyPartyApp/Base.lproj/Main.storyboard
+++ b/MyPartyApp/Base.lproj/Main.storyboard
@@ -121,20 +121,20 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4MN-ZE-qcK">
-                                <rect key="frame" x="41" y="198" width="287" height="30"/>
+                                <rect key="frame" x="41" y="198" width="280" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4T5-ct-eQJ">
-                                <rect key="frame" x="41" y="94" width="287" height="30"/>
+                                <rect key="frame" x="41" y="94" width="280" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="287" id="bcP-bs-5GL"/>
+                                    <constraint firstAttribute="width" constant="280" id="bcP-bs-5GL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJT-Ic-M4M">
-                                <rect key="frame" x="41" y="302" width="287" height="20"/>
+                                <rect key="frame" x="41" y="302" width="280" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="9Sg-kD-cFP"/>
                                 </constraints>
@@ -143,16 +143,8 @@
                                 <nil key="highlightedColor"/>
                                 <color key="shadowColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSx-Zv-sK4">
-                                <rect key="frame" x="41" y="552" width="63" height="36"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Cancel"/>
-                                <connections>
-                                    <action selector="cancelButton:" destination="mg1-lo-2gp" eventType="touchUpInside" id="MET-rn-2Vo"/>
-                                </connections>
-                            </button>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="YGa-yg-U1B">
-                                <rect key="frame" x="47" y="328" width="287" height="216"/>
+                                <rect key="frame" x="54" y="328" width="280" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="503195227.20661998">
                                     <!--2016-12-12 00:27:07 +0000-->
                                 </date>
@@ -161,11 +153,19 @@
                                 </connections>
                             </datePicker>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pYJ-1f-UUl">
-                                <rect key="frame" x="271" y="552" width="63" height="36"/>
+                                <rect key="frame" x="271" y="584" width="63" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
-                                    <segue destination="FdL-lZ-kd3" kind="unwind" unwindAction="unwindtoPartyTable:" id="st7-ag-zYe"/>
+                                    <segue destination="FdL-lZ-kd3" kind="unwind" identifier="unwindtoPartyTable" unwindAction="unwindtoPartyTable:" id="st7-ag-zYe"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSx-Zv-sK4">
+                                <rect key="frame" x="47" y="584" width="63" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Cancel"/>
+                                <connections>
+                                    <action selector="cancelButton:" destination="mg1-lo-2gp" eventType="touchUpInside" id="MET-rn-2Vo"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -173,15 +173,15 @@
                         <constraints>
                             <constraint firstItem="eJT-Ic-M4M" firstAttribute="top" secondItem="IjA-9D-07n" secondAttribute="bottom" constant="15" id="1Rn-7W-Bt4"/>
                             <constraint firstItem="oMC-mL-6YJ" firstAttribute="top" secondItem="4T5-ct-eQJ" secondAttribute="bottom" constant="25" id="2LL-RI-2Ua"/>
-                            <constraint firstItem="q8v-Ea-UMv" firstAttribute="top" secondItem="pYJ-1f-UUl" secondAttribute="bottom" constant="79" id="2og-FU-CQq"/>
+                            <constraint firstItem="q8v-Ea-UMv" firstAttribute="top" secondItem="pYJ-1f-UUl" secondAttribute="bottom" constant="47" id="2og-FU-CQq"/>
                             <constraint firstItem="4MN-ZE-qcK" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="2qe-Fh-43T"/>
-                            <constraint firstItem="pYJ-1f-UUl" firstAttribute="leading" secondItem="nSx-Zv-sK4" secondAttribute="trailing" constant="167" id="6OI-SX-vhT"/>
+                            <constraint firstItem="pYJ-1f-UUl" firstAttribute="leading" secondItem="nSx-Zv-sK4" secondAttribute="trailing" constant="161" id="6OI-SX-vhT"/>
                             <constraint firstItem="QFm-4v-iMM" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leading" constant="18" id="Co4-q5-eoI"/>
-                            <constraint firstItem="pYJ-1f-UUl" firstAttribute="top" secondItem="YGa-yg-U1B" secondAttribute="bottom" constant="8" id="Iuo-Tw-YPP"/>
+                            <constraint firstItem="pYJ-1f-UUl" firstAttribute="top" secondItem="YGa-yg-U1B" secondAttribute="bottom" constant="40" id="Iuo-Tw-YPP"/>
                             <constraint firstItem="4MN-ZE-qcK" firstAttribute="top" secondItem="oMC-mL-6YJ" secondAttribute="bottom" constant="15" id="KP1-rL-mCE"/>
                             <constraint firstItem="IjA-9D-07n" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="5" id="NpK-wS-Kce"/>
                             <constraint firstItem="eJT-Ic-M4M" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="25" id="OCR-5Z-79q"/>
-                            <constraint firstItem="nSx-Zv-sK4" firstAttribute="top" secondItem="YGa-yg-U1B" secondAttribute="bottom" constant="8" id="SjY-0e-uPh"/>
+                            <constraint firstItem="nSx-Zv-sK4" firstAttribute="top" secondItem="YGa-yg-U1B" secondAttribute="bottom" constant="40" id="SjY-0e-uPh"/>
                             <constraint firstItem="nSx-Zv-sK4" firstAttribute="width" secondItem="pYJ-1f-UUl" secondAttribute="width" id="al4-3F-64y"/>
                             <constraint firstItem="IjA-9D-07n" firstAttribute="top" secondItem="4MN-ZE-qcK" secondAttribute="bottom" constant="25" id="baV-i6-1qK"/>
                             <constraint firstItem="oMC-mL-6YJ" firstAttribute="leading" secondItem="nPQ-It-a9g" secondAttribute="leadingMargin" constant="5" id="f58-RX-8di"/>
@@ -215,7 +215,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j6q-bt-oiQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="FdL-lZ-kd3" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4119.1999999999998" y="-356.67166416791605"/>
+            <point key="canvasLocation" x="2734" y="-513"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="05o-of-Thd">
@@ -236,14 +236,21 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="crz-MQ-Bu8" firstAttribute="centerX" secondItem="AW1-h7-DCf" secondAttribute="centerX" id="9Wl-NU-IZb"/>
+                            <constraint firstItem="yNc-aD-mAN" firstAttribute="top" secondItem="crz-MQ-Bu8" secondAttribute="bottom" id="FBZ-VU-LRt"/>
+                            <constraint firstItem="crz-MQ-Bu8" firstAttribute="top" secondItem="twT-l3-jvV" secondAttribute="bottom" id="TwQ-eR-tgV"/>
                             <constraint firstAttribute="trailing" secondItem="crz-MQ-Bu8" secondAttribute="trailing" id="ViY-AE-faf"/>
-                            <constraint firstItem="crz-MQ-Bu8" firstAttribute="top" secondItem="twT-l3-jvV" secondAttribute="bottom" id="XMb-IV-yI2"/>
-                            <constraint firstItem="yNc-aD-mAN" firstAttribute="top" secondItem="crz-MQ-Bu8" secondAttribute="bottom" id="lBv-uu-2yL"/>
                             <constraint firstItem="crz-MQ-Bu8" firstAttribute="leading" secondItem="AW1-h7-DCf" secondAttribute="leading" id="rM6-N1-JN7"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="98N-LL-WVR">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="40s-8p-thh"/>
+                        <barButtonItem key="backBarButtonItem" title="Back" id="wU4-rF-QE9">
+                            <color key="tintColor" red="0.99992305039999996" green="0.30901139970000002" blue="0.35104399920000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </barButtonItem>
+                        <barButtonItem key="leftBarButtonItem" title="Your Party List" id="hVe-YM-nJr">
+                            <connections>
+                                <action selector="BackButton:" destination="89I-5E-Nqe" id="CsF-ue-F7w"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="crz-MQ-Bu8" id="Lbo-aG-1gH"/>
@@ -251,7 +258,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fix-Rv-Dls" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5383.1999999999998" y="691.304347826087"/>
+            <point key="canvasLocation" x="3986" y="690"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="m9M-CP-35W">
@@ -276,6 +283,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DrF-eb-imO" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="6wS-lo-gkc"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mxm-6B-5mv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -287,7 +295,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z5k-vd-gCt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4444" y="691.304347826087"/>
+            <point key="canvasLocation" x="2734" y="691"/>
         </scene>
     </scenes>
     <color key="tintColor" red="0.99992305040359497" green="0.30901139974594116" blue="0.35104399919509888" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
